--- a/.github/workflows/netlify-deploy.yml
+++ b/.github/workflows/netlify-deploy.yml
@@ -1,42 +1,53 @@
-name: Deploy to Netlify
+name: Deploy to EC2
 
 on:
   push:
     branches:
       - main
 
-permissions:
-  contents: read
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    # Step 1: Checkout Repository
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: 'npm'
+    # Step 2: Login to DockerHub
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Install dependencies
-        run: npm ci
+    # Step 3: Validate Image Pull (Optional Safety Check)
+    - name: Pull Docker Image
+      run: docker pull indhujavs/guvi_phase_3:latest
 
-      - name: Build project
-        run: npm run build
-
-      - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v2.0.0
-        with:
-          publish-dir: ./dist
-          production-branch: main
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-
-
-
-          nfp_Yv89ymiXx7cs1BwfmPbtVse9ohqbDQYQ5723
+    # Step 4: SSH into EC2 and Deploy
+    - name: SSH and Deploy
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        port: 22
+        script: |
+          echo "Stopping existing container..."
+          sudo docker stop myapp || true
+          
+          echo "Removing old container..."
+          sudo docker rm myapp || true
+          
+          echo "Pulling latest image..."
+          sudo docker pull indhujavs/guvi_phase_3:latest
+          
+          echo "Starting new container..."
+          sudo docker run -d \
+            -p 80:3000 \
+            --restart always \
+            --name myapp \
+            chandrulinesmasher/mysampleappv1:latest
+          
+          echo "Deployment completed successfully!"
