--- a/.github/workflows/netlify-deploy.yml
+++ b/.github/workflows/netlify-deploy.yml
@@ -48,6 +48,6 @@ jobs:
             -p 80:3000 \
             --restart always \
             --name myapp \
-            chandrulinesmasher/mysampleappv1:latest
+            indhujavs/guvi_phase_3:latest
           
           echo "Deployment completed successfully!"
